force-app/main/default/objects/Health_Assessment__c/Health_Assessment__c.object-meta.xml
<CustomObject>
    <label>Health Assessment</label>
    <nameField><displayFormat>HA-{000000}</displayFormat><label>Health Assessment Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Health Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>