force-app/main/default/objects/Health_Assessment__c/fields/Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date__c</fullName>
    <label>Assessment Date</label>
    <type>Date</type>
</CustomField>