force-app/main/default/objects/Health_Assessment__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Health Assessments</relationshipLabel>
    <relationshipName>HealthAssessments</relationshipName>
    <type>Lookup</type>
</CustomField>